[package]
name = "llmgrep"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ollama-rs = "0.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
